--- a/build.config
+++ b/build.config
@@ -1,28 +1,28 @@
 {
   "resources":[
     {
-      "path":".assets/",
+      "path":"assets/",
       "resourceType":"resource"
     },
     {
-      "path":".assets/gui/",
+      "path":"assets/gui/",
       "resourceType":"gui"
     }
   ],
   "defaultConfig":{
     "buildType":"develop",
     "api":"CoreEngine",
-    "libraryDir":".core/lib/"
+    "libraryDir":"core/lib/"
   },
   "buildDirs":[
     {
-      "targetSource":".main.js",
-      "dir":".core/dev/"
+      "targetSource":"main.js",
+      "dir":"core/dev/"
     }
   ],
   "compile":[
     {
-      "path":".main.js",
+      "path":"main.js",
       "sourceType":"mod"
     },
     {
