--- a/build.config
+++ b/build.config
@@ -12,7 +12,9 @@
   "defaultConfig":{
     "buildType":"develop",
     "api":"CoreEngine",
-    "libraryDir":"core/lib/"
+    "libraryDir":"core/lib/",
+    "resourcePacksDir":"add-on/res_pack/",
+    "behaviorPacksDir":"add-on/beh_pack/"
   },
   "buildDirs":[
     {
