--- a/build.config
+++ b/build.config
@@ -12,9 +12,7 @@
   "defaultConfig":{
     "buildType":"develop",
     "api":"CoreEngine",
-    "libraryDir":"core/lib/",
-    "resourcePacksDir":"add-on/res_pack/",
-    "behaviorPacksDir":"add-on/beh_pack/"
+    "libraryDir":"core/lib/"
   },
   "buildDirs":[
     {
